--- a/_config.yml
+++ b/_config.yml
@@ -78,6 +78,7 @@ theme: cactus-light
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:kolov/kolov.github.io.git
+#  repo: git@github.com:kolov/kolov.github.io.git
+  repo: https://__GITHUB_TOKEN__@github.com/kolov/kolov.github.io.git
   branch: master
 
